--- a/public/app/views/home.html
+++ b/public/app/views/home.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container">
       <nav>
-        || <a href="#">Profile</a> ||
+        || <a href="profile.html">Profile</a> ||
         <a href="#" onclick="logout();"> Logout</a> ||
       </nav>
       <!--Home-->
@@ -22,12 +22,12 @@
           </header>
           <div class="row">
             <div class="col-lg-3">
-              <article class="comic-single">
-                <img src="../../assets/img/comic.jpg" alt="" onmouseover="showPanel();" onmouseout="hidePanel();"/>
-                <div id="panel-azul" class="panel panel-body panel-azul">
-                  <h3>Titulo</h3>
-                  <h4>$ 50.00</h4>
-                </div>
+              <div id="panel-single" class="panel panel-body panel-single">
+                <h4>Titulo</h4>
+                <h4>$ 50.00</h4>
+              </div>
+              <article id="comic-single" class="comic-single">
+                <img src="../../assets/img/comic.jpg" alt="" onmouseover="showDom('panel-single');" onmouseout="hideDom('panel-single');"/>
               </article>
             </div>
           </div>
@@ -41,6 +41,8 @@
     </footer>
     <!--jQuery-->
     <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+    <!--Main Route-->
+    <script type="text/javascript" src="../routes/main.js"></script>
     <!--Home Route-->
     <script type="text/javascript" src="../routes/home.js"></script>
   </body>
