--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,4 +1,5 @@
-/* GENERAL */
+/* style.css */
+
 body {
   background-image: url(../img/bg.gif);
 }
@@ -11,16 +12,16 @@ nav {
   float:right;
 }
 
-.panel-azul {
+.panel-single {
   display:none;
-  padding-top:0;
+  padding-top: 0px;
+  z-index: 0;
+  position:absolute;
   width: 250px;
-  height: 100px;
-  background-color: #337ab7;
+  height: 70px;
+  background-color: rgba(0,0,0,.6);
   color: rgba(255,255,255,.8);
-  -webkit-box-shadow: 4px 4px 4px #ccc;
-  -moz-box-shadow: 4px 4px 4px #ccc;
-  box-shadow: 4px 4px 4px #ccc;
+  margin-top: 250px;
 }
 
 .login-panel {
@@ -30,7 +31,7 @@ nav {
   border: solid 1px rgba(0,0,0,.2);
   background-color: rgba(255,255,255,.6);
 }
-/*.comic-single*/
+
 img {
   width: 250px;
   height: 320px;
@@ -38,4 +39,13 @@ img {
 
 img:hover {
   cursor: pointer;
+}
+
+.right {
+  float: right;
+}
+
+.perfil {
+  width:50%;
+  height: 50%;
 }
