--- a/public/app/views/home.html
+++ b/public/app/views/home.html
@@ -20,17 +20,6 @@
             <h1>Home!</h1>
             <hr>
           </header>
-          <div class="row">
-            <div class="col-lg-3">
-              <div id="panel-single" class="panel panel-body panel-single">
-                <h4>Titulo</h4>
-                <h4>$ 50.00</h4>
-              </div>
-              <article id="comic-single" class="comic-single">
-                <img src="../../assets/img/comic.jpg" alt="" onmouseover="showDom('panel-single');" onmouseout="hideDom('panel-single');"/>
-              </article>
-            </div>
-          </div>
       </section>
     </div>
     <footer>
@@ -40,7 +29,7 @@
       </div>
     </footer>
     <!--jQuery-->
-    <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+    <script src="//code.jquery.com/jquery-2.2.0.js"></script>
     <!--Main Route-->
     <script type="text/javascript" src="../routes/main.js"></script>
     <!--Home Route-->
