--- a/public/app/views/profile.html
+++ b/public/app/views/profile.html
@@ -42,7 +42,7 @@
       </div>
     </footer>
     <!--jQuery-->
-    <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+    <script src="//code.jquery.com/jquery-2.2.0.js"></script>
     <!--Main Route-->
     <script type="text/javascript" src="../routes/main.js"></script>
     <!--Profile Route-->
