--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,5 +1,4 @@
 /* style.css */
-
 body {
   background-image: url(../img/bg.gif);
 }
@@ -12,18 +11,6 @@ nav {
   float:right;
 }
 
-.panel-single {
-  display:none;
-  padding-top: 0px;
-  z-index: 0;
-  position:absolute;
-  width: 250px;
-  height: 70px;
-  background-color: rgba(0,0,0,.6);
-  color: rgba(255,255,255,.8);
-  margin-top: 250px;
-}
-
 .login-panel {
   padding:15px;
   margin: 0 auto;
@@ -32,9 +19,43 @@ nav {
   background-color: rgba(255,255,255,.6);
 }
 
+.comicIndividual {
+  position:relative;
+  padding: 0px;
+}
+
+.comicIndividual .panel-title,
+.comicIndividual .panel-price {
+  margin: 5px;
+}
+
+.comicIndividual .panel-title {
+  font-size: 1.5em;
+}
+
+.comicIndividual .panel-price {
+  font-size: 1.2em;
+}
+
+.panel-single {
+  display:none;
+  right: 0;
+  left: 0;
+  top: 0;
+  position:absolute;
+  width: 90%;
+  height: 25%;
+  background-color: rgba(0,0,0,.6);
+  color: rgba(255,255,255,.8);
+}
+
 img {
-  width: 250px;
+  width: 90%;
   height: 320px;
+  -webkit-box-shadow: 4px 4px 4px #ccc;
+  -moz-box-shadow: 4px 4px 4px #ccc;
+  box-shadow: 4px 4px 4px #ccc;
+  margin-bottom: 15px;
 }
 
 img:hover {
@@ -48,4 +69,12 @@ img:hover {
 .perfil {
   width:50%;
   height: 50%;
+}
+
+.myPanel {
+  border: solid 1px rgba(0,0,0,.2);
+}
+
+.cara {
+  color:rgba(0,0,0,.2);
 }
