--- a/public/app/views/home.html
+++ b/public/app/views/home.html
@@ -17,7 +17,7 @@
       <!--Home-->
       <section id="home">
           <header>
-            <h1>Home!</h1>
+            <h1>Comic Zone!</h1>
             <hr>
           </header>
       </section>
@@ -25,7 +25,9 @@
     <footer>
       <div class="container">
         <hr>
-        <h3>Footer!</h3>
+        || <a href="#">SiteMap</a> ||
+        <a href="#">Disclaimer</a> ||
+        <a href="#">Facebook</a> ||
       </div>
     </footer>
     <!--jQuery-->
