Update finished files!

--- a/public/app/views/profile.html
+++ b/public/app/views/profile.html
@@ -21,14 +21,10 @@
             <hr>
           </header>
           <div class="container">
-            <div class="row">
-              <div class="col-lg-3">
+            <div class="row user-profile-info-container">
                 <img id="userImg" class="perfil img-circle" alt="" />
-              </div>
-              <div class="col-lg-9 right">
                 <h4 id="nameUser"></h4>
                 <h4 id="apellido"></h4>
-              </div>
             </div>
           </div>
       </section>
